--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_gemini_gemini-2_5-flash_reports_consistent_token_counts_compared_to_non-streaming.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_gemini_gemini-2_5-flash_reports_consistent_token_counts_compared_to_non-streaming.yml
@@ -33,7 +33,7 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Mon, 03 Nov 2025 13:58:05 GMT
+      - Fri, 28 Nov 2025 19:38:45 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -43,7 +43,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=953
+      - gfet4t7; dur=548
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
     body:
@@ -52,8 +52,8 @@ http_interactions:
         2, 3\"}],\"role\": \"model\"},\"finishReason\": \"STOP\",\"index\": 0}],\"usageMetadata\":
         {\"promptTokenCount\": 8,\"candidatesTokenCount\": 7,\"totalTokenCount\":
         38,\"promptTokensDetails\": [{\"modality\": \"TEXT\",\"tokenCount\": 8}],\"thoughtsTokenCount\":
-        23},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\": \"7LQIab_xKOfXvdIPiOmW6As\"}\r\n\r\n"
-  recorded_at: Mon, 03 Nov 2025 13:58:05 GMT
+        23},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\": \"RfopabeSHKbXz7IP9Oar8Q4\"}\r\n\r\n"
+  recorded_at: Fri, 28 Nov 2025 19:38:38 GMT
 - request:
     method: post
     uri: https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
@@ -83,7 +83,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Mon, 03 Nov 2025 13:58:06 GMT
+      - Fri, 28 Nov 2025 19:38:46 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -93,7 +93,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=892
+      - gfet4t7; dur=771
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -129,7 +129,7 @@ http_interactions:
             "thoughtsTokenCount": 23
           },
           "modelVersion": "gemini-2.5-flash",
-          "responseId": "7bQIaY_EOaTYxs0Ptf-I0QQ"
+          "responseId": "RvopaY-8HMSvqtsPiti6gQo"
         }
-  recorded_at: Mon, 03 Nov 2025 13:58:06 GMT
+  recorded_at: Fri, 28 Nov 2025 19:38:39 GMT
 recorded_with: VCR 6.3.1
