--- a/spec/fixtures/vcr_cassettes/transcription_basic_functionality_gemini_gemini-2_5-flash_can_transcribe_with_language_hint.yml
+++ b/spec/fixtures/vcr_cassettes/transcription_basic_functionality_gemini_gemini-2_5-flash_can_transcribe_with_language_hint.yml
@@ -30,7 +30,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Mon, 03 Nov 2025 14:05:01 GMT
+      - Fri, 28 Nov 2025 19:38:13 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -40,7 +40,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=3005
+      - gfet4t7; dur=3588
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -54,7 +54,7 @@ http_interactions:
               "content": {
                 "parts": [
                   {
-                    "text": "re we"
+                    "text": "Remini hmmph"
                   }
                 ],
                 "role": "model"
@@ -65,8 +65,8 @@ http_interactions:
           ],
           "usageMetadata": {
             "promptTokenCount": 57,
-            "candidatesTokenCount": 2,
-            "totalTokenCount": 107,
+            "candidatesTokenCount": 4,
+            "totalTokenCount": 343,
             "promptTokensDetails": [
               {
                 "modality": "TEXT",
@@ -77,10 +77,10 @@ http_interactions:
                 "tokenCount": 37
               }
             ],
-            "thoughtsTokenCount": 48
+            "thoughtsTokenCount": 282
           },
           "modelVersion": "gemini-2.5-flash",
-          "responseId": "jbYIaZrSK_rlvdIPvLr0uQw"
+          "responseId": "JfopadSdAYaeqtsP4fCR2Ag"
         }
-  recorded_at: Mon, 03 Nov 2025 14:05:01 GMT
+  recorded_at: Fri, 28 Nov 2025 19:38:05 GMT
 recorded_with: VCR 6.3.1
