--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_gemini_gemini-2_5-flash_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_gemini_gemini-2_5-flash_supports_streaming_responses.yml
@@ -33,7 +33,7 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Mon, 03 Nov 2025 13:58:04 GMT
+      - Fri, 28 Nov 2025 19:38:44 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -43,7 +43,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=1786
+      - gfet4t7; dur=757
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
     body:
@@ -51,7 +51,7 @@ http_interactions:
       string: "data: {\"candidates\": [{\"content\": {\"parts\": [{\"text\": \"1,
         2, 3\"}],\"role\": \"model\"},\"finishReason\": \"STOP\",\"index\": 0}],\"usageMetadata\":
         {\"promptTokenCount\": 8,\"candidatesTokenCount\": 7,\"totalTokenCount\":
-        39,\"promptTokensDetails\": [{\"modality\": \"TEXT\",\"tokenCount\": 8}],\"thoughtsTokenCount\":
-        24},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\": \"67QIaai2Je-DkdUPidzqyAY\"}\r\n\r\n"
-  recorded_at: Mon, 03 Nov 2025 13:58:04 GMT
+        38,\"promptTokensDetails\": [{\"modality\": \"TEXT\",\"tokenCount\": 8}],\"thoughtsTokenCount\":
+        23},\"modelVersion\": \"gemini-2.5-flash\",\"responseId\": \"RPopaeKpL9fpz7IP8abhwQ8\"}\r\n\r\n"
+  recorded_at: Fri, 28 Nov 2025 19:38:37 GMT
 recorded_with: VCR 6.3.1
