--- a/spec/fixtures/vcr_cassettes/transcription_basic_functionality_gemini_gemini-2_5-flash_can_transcribe_audio.yml
+++ b/spec/fixtures/vcr_cassettes/transcription_basic_functionality_gemini_gemini-2_5-flash_can_transcribe_audio.yml
@@ -30,7 +30,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Mon, 03 Nov 2025 14:04:58 GMT
+      - Fri, 28 Nov 2025 19:38:09 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -40,7 +40,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=15474
+      - gfet4t7; dur=9727
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -54,7 +54,7 @@ http_interactions:
               "content": {
                 "parts": [
                   {
-                    "text": "Ribbit Riiiiibbbiiit"
+                    "text": "Monday [high-pitched tone continues]"
                   }
                 ],
                 "role": "model"
@@ -66,7 +66,7 @@ http_interactions:
           "usageMetadata": {
             "promptTokenCount": 51,
             "candidatesTokenCount": 8,
-            "totalTokenCount": 1326,
+            "totalTokenCount": 1400,
             "promptTokensDetails": [
               {
                 "modality": "TEXT",
@@ -77,10 +77,10 @@ http_interactions:
                 "tokenCount": 37
               }
             ],
-            "thoughtsTokenCount": 1267
+            "thoughtsTokenCount": 1341
           },
           "modelVersion": "gemini-2.5-flash",
-          "responseId": "irYIadqCKNyBxs0PuZCr0As"
+          "responseId": "Ifopaa_QE_6eqtsP16KroQo"
         }
-  recorded_at: Mon, 03 Nov 2025 14:04:58 GMT
+  recorded_at: Fri, 28 Nov 2025 19:38:02 GMT
 recorded_with: VCR 6.3.1
