Add returned verbose json words to transcription

--- a/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_handles_anyof_params.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_handles_anyof_params.yml
@@ -27,7 +27,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 14:00:35 GMT
+      - Sat, 29 Nov 2025 17:50:57 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -39,25 +39,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '1343'
+      - '420'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '1374'
+      - '553'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199974'
+      - '1999974'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 7ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -81,9 +81,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpOkge5CTXGwT9TWm4XDvD77c6C8",
+          "id": "chatcmpl-ChJNxswCFP1CmwDQpbzlJBWSxdhxv",
           "object": "chat.completion",
-          "created": 1762178434,
+          "created": 1764438657,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -93,7 +93,7 @@ http_interactions:
                 "content": null,
                 "tool_calls": [
                   {
-                    "id": "call_yMgokF7J3uQLsJlEP0m3U4g3",
+                    "id": "call_s41khVvsk0DPTNkouuDNhSbT",
                     "type": "function",
                     "function": {
                       "name": "any_of_params",
@@ -124,7 +124,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_1a97b5aa6c"
         }
-  recorded_at: Mon, 03 Nov 2025 14:00:35 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:57 GMT
 recorded_with: VCR 6.3.1
