--- a/spec/fixtures/vcr_cassettes/chat_vision_models_openai_gpt-4_1-nano_can_understand_local_images.yml
+++ b/spec/fixtures/vcr_cassettes/chat_vision_models_openai_gpt-4_1-nano_can_understand_local_images.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:48:52 GMT
+      - Sat, 29 Nov 2025 17:50:01 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -36,31 +36,31 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '645'
+      - '441'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '678'
+      - '473'
       X-Ratelimit-Limit-Input-Images:
       - '50000'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Input-Images:
       - '49999'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199225'
+      - '1999225'
       X-Ratelimit-Reset-Input-Images:
       - 1ms
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 232ms
+      - 23ms
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -84,16 +84,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpDPif7puNeVwsEFApi2TWVZbphW",
+          "id": "chatcmpl-ChJN3HY2mKUuWsXOaVJh8ZqY0mnTv",
           "object": "chat.completion",
-          "created": 1762177731,
+          "created": 1764438601,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "The image appears to be a stylized, low-poly illustration of a red gemstone or gem cut with facets, set against a plain background.",
+                "content": "This image features a stylized, geometric representation of a red gemstone or ruby, with facets and facets highlighting its cut and reflective surfaces.",
                 "refusal": null,
                 "annotations": []
               },
@@ -103,8 +103,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 56,
-            "completion_tokens": 28,
-            "total_tokens": 84,
+            "completion_tokens": 27,
+            "total_tokens": 83,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -117,7 +117,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_438cf0ae7a"
+          "system_fingerprint": "fp_eb30fd4545"
         }
-  recorded_at: Mon, 03 Nov 2025 13:48:52 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:01 GMT
 recorded_with: VCR 6.3.1
