--- a/spec/fixtures/vcr_cassettes/chat_audio_models_openai_gpt-4o-mini-audio-preview_can_understand_audio.yml
+++ b/spec/fixtures/vcr_cassettes/chat_audio_models_openai_gpt-4o-mini-audio-preview_can_understand_audio.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:49:57 GMT
+      - Sat, 29 Nov 2025 17:50:04 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -36,25 +36,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '807'
+      - '580'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '853'
+      - '603'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9999'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199993'
+      - '1999993'
       X-Ratelimit-Reset-Requests:
-      - 8.64s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 2ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -78,16 +78,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpETb8m9n1PaXy0Y1RlYbjwUKPKM",
+          "id": "chatcmpl-ChJN601mZOkE5Sbk8Z9gKTycBcY4R",
           "object": "chat.completion",
-          "created": 1762177797,
+          "created": 1764438604,
           "model": "gpt-4o-mini-audio-preview-2024-12-17",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "I'm unable to identify or transcribe what is being said from a voice sample or audio input. If you have any text or visual content you would like to discuss, feel free to share it!",
+                "content": "It looks like you're referring to \"Ruby.\" If you have a specific context or question about \"Ruby,\" let me know how I can assist you!",
                 "refusal": null,
                 "annotations": []
               },
@@ -96,8 +96,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 27,
-            "completion_tokens": 39,
-            "total_tokens": 66,
+            "completion_tokens": 30,
+            "total_tokens": 57,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 11,
@@ -109,11 +109,11 @@ http_interactions:
               "audio_tokens": 0,
               "accepted_prediction_tokens": 0,
               "rejected_prediction_tokens": 0,
-              "text_tokens": 39
+              "text_tokens": 30
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_88b3b5b1ce"
+          "system_fingerprint": "fp_c0cae15cf2"
         }
-  recorded_at: Mon, 03 Nov 2025 13:49:57 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:04 GMT
 recorded_with: VCR 6.3.1
