--- a/spec/fixtures/vcr_cassettes/chat_audio_models_openai_gpt-4o-mini-audio-preview_can_understand_mp3_audio.yml
+++ b/spec/fixtures/vcr_cassettes/chat_audio_models_openai_gpt-4o-mini-audio-preview_can_understand_mp3_audio.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:49:58 GMT
+      - Sat, 29 Nov 2025 17:50:05 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -36,25 +36,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '542'
+      - '506'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '563'
+      - '537'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9998'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199993'
+      - '1999993'
       X-Ratelimit-Reset-Requests:
-      - 16.253s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 2ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -78,16 +78,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpEU9Pft8jT73bnGqBUGUS0MYNaf",
+          "id": "chatcmpl-ChJN7AhTiRTbyJO44mbZdQymSeY3j",
           "object": "chat.completion",
-          "created": 1762177798,
+          "created": 1764438605,
           "model": "gpt-4o-mini-audio-preview-2024-12-17",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "It seems you're asking for the contents of what is being said. If you need help with information from an image or text, please provide additional details or context!",
+                "content": "I'm unable to help with identifying speakers from voice samples. If you need assistance with text or have questions about other topics, feel free to ask!",
                 "refusal": null,
                 "annotations": []
               },
@@ -96,8 +96,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 27,
-            "completion_tokens": 32,
-            "total_tokens": 59,
+            "completion_tokens": 29,
+            "total_tokens": 56,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 11,
@@ -109,11 +109,11 @@ http_interactions:
               "audio_tokens": 0,
               "accepted_prediction_tokens": 0,
               "rejected_prediction_tokens": 0,
-              "text_tokens": 32
+              "text_tokens": 29
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_88b3b5b1ce"
+          "system_fingerprint": "fp_c0cae15cf2"
         }
-  recorded_at: Mon, 03 Nov 2025 13:49:58 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:05 GMT
 recorded_with: VCR 6.3.1
