--- a/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4_1-nano_returns_raw_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4_1-nano_returns_raw_responses.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:57:01 GMT
+      - Sat, 29 Nov 2025 17:50:31 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -36,25 +36,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '267'
+      - '263'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '282'
+      - '284'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199990'
+      - '1999990'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 3ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -78,9 +78,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpLJnVrC61hCjX1ycEDjTcyY2cQk",
+          "id": "chatcmpl-ChJNXilEnirwHepBgaqqRGc1Zk4UE",
           "object": "chat.completion",
-          "created": 1762178221,
+          "created": 1764438631,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -111,7 +111,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_eb30fd4545"
         }
-  recorded_at: Mon, 03 Nov 2025 13:57:01 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:31 GMT
 recorded_with: VCR 6.3.1
