--- a/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_can_handle_multiple_tool_calls_in_a_single_response.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_can_handle_multiple_tool_calls_in_a_single_response.yml
@@ -26,7 +26,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 14:00:20 GMT
+      - Sat, 29 Nov 2025 17:50:55 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -38,25 +38,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '856'
+      - '466'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '875'
+      - '481'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199971'
+      - '1999971'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 8ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -80,9 +80,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpOVrwLna3u8kgRTI3CqfoZSYyJf",
+          "id": "chatcmpl-ChJNutJmLAUSMjMOT8lQe64MGhRgb",
           "object": "chat.completion",
-          "created": 1762178419,
+          "created": 1764438654,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -92,7 +92,7 @@ http_interactions:
                 "content": null,
                 "tool_calls": [
                   {
-                    "id": "call_umzB9AEie6pw2BceuqDhshgb",
+                    "id": "call_i60UPBOU7F0uL7HpLCp1mNQk",
                     "type": "function",
                     "function": {
                       "name": "dice_roll",
@@ -100,7 +100,7 @@ http_interactions:
                     }
                   },
                   {
-                    "id": "call_pYTMwEePp4QywNR6mhVO0Y0F",
+                    "id": "call_dFMxDMpVTt4DYfJn7xbrcYnA",
                     "type": "function",
                     "function": {
                       "name": "dice_roll",
@@ -108,7 +108,7 @@ http_interactions:
                     }
                   },
                   {
-                    "id": "call_k29YADxEAbW8WKgPxS3qkOUS",
+                    "id": "call_59vaF8kynC8kCrL5YLP9eF5G",
                     "type": "function",
                     "function": {
                       "name": "dice_roll",
@@ -139,9 +139,9 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_ef015fa747"
         }
-  recorded_at: Mon, 03 Nov 2025 14:00:20 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:55 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
@@ -149,10 +149,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"model":"gpt-4.1-nano","messages":[{"role":"developer","content":"You
         must call the dice_roll tool exactly 3 times when asked to roll dice 3 times."},{"role":"user","content":"Roll
-        the dice 3 times"},{"role":"assistant","tool_calls":[{"id":"call_umzB9AEie6pw2BceuqDhshgb","type":"function","function":{"name":"dice_roll","arguments":"{}"}},{"id":"call_pYTMwEePp4QywNR6mhVO0Y0F","type":"function","function":{"name":"dice_roll","arguments":"{}"}},{"id":"call_k29YADxEAbW8WKgPxS3qkOUS","type":"function","function":{"name":"dice_roll","arguments":"{}"}}]},{"role":"tool","content":"{roll:
-        1}","tool_call_id":"call_umzB9AEie6pw2BceuqDhshgb"},{"role":"tool","content":"{roll:
-        2}","tool_call_id":"call_pYTMwEePp4QywNR6mhVO0Y0F"},{"role":"tool","content":"{roll:
-        3}","tool_call_id":"call_k29YADxEAbW8WKgPxS3qkOUS"}],"stream":false,"tools":[{"type":"function","function":{"name":"dice_roll","description":"Rolls
+        the dice 3 times"},{"role":"assistant","tool_calls":[{"id":"call_i60UPBOU7F0uL7HpLCp1mNQk","type":"function","function":{"name":"dice_roll","arguments":"{}"}},{"id":"call_dFMxDMpVTt4DYfJn7xbrcYnA","type":"function","function":{"name":"dice_roll","arguments":"{}"}},{"id":"call_59vaF8kynC8kCrL5YLP9eF5G","type":"function","function":{"name":"dice_roll","arguments":"{}"}}]},{"role":"tool","content":"{:roll=>1}","tool_call_id":"call_i60UPBOU7F0uL7HpLCp1mNQk"},{"role":"tool","content":"{:roll=>2}","tool_call_id":"call_dFMxDMpVTt4DYfJn7xbrcYnA"},{"role":"tool","content":"{:roll=>3}","tool_call_id":"call_59vaF8kynC8kCrL5YLP9eF5G"}],"stream":false,"tools":[{"type":"function","function":{"name":"dice_roll","description":"Rolls
         a single six-sided die and returns the result","parameters":{"type":"object","properties":{},"required":[],"additionalProperties":false,"strict":true}}}]}'
     headers:
       User-Agent:
@@ -171,7 +168,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 14:00:21 GMT
+      - Sat, 29 Nov 2025 17:50:55 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -183,25 +180,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '352'
+      - '285'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '366'
+      - '296'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199960'
+      - '1999960'
       X-Ratelimit-Reset-Requests:
-      - 120ms
-      X-Ratelimit-Reset-Tokens:
       - 12ms
+      X-Ratelimit-Reset-Tokens:
+      - 1ms
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -225,9 +222,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpOWOUupmoy4WXlp6rkOpCzYKrs8",
+          "id": "chatcmpl-ChJNveT6BOdElOOBc3sgcI28mL4nN",
           "object": "chat.completion",
-          "created": 1762178420,
+          "created": 1764438655,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -243,9 +240,9 @@ http_interactions:
             }
           ],
           "usage": {
-            "prompt_tokens": 151,
+            "prompt_tokens": 150,
             "completion_tokens": 19,
-            "total_tokens": 170,
+            "total_tokens": 169,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -258,7 +255,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_ef015fa747"
         }
-  recorded_at: Mon, 03 Nov 2025 14:00:21 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:55 GMT
 recorded_with: VCR 6.3.1
