--- a/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_can_use_tools_without_parameters.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4_1-nano_can_use_tools_without_parameters.yml
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:59:23 GMT
+      - Sat, 29 Nov 2025 17:50:46 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -37,25 +37,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '427'
+      - '579'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '449'
+      - '599'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199989'
+      - '1999989'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 3ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -79,9 +79,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpNb6xtiJWTN263kevQpjgvzZTGz",
+          "id": "chatcmpl-ChJNl0iu9Nn4vlJVU2JggbwfZVdfU",
           "object": "chat.completion",
-          "created": 1762178363,
+          "created": 1764438645,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -91,7 +91,7 @@ http_interactions:
                 "content": null,
                 "tool_calls": [
                   {
-                    "id": "call_ORuIYdgXtkTugIWFbEUfOL90",
+                    "id": "call_azoFR6ub8awyNahm3PsTcvS4",
                     "type": "function",
                     "function": {
                       "name": "best_language_to_learn",
@@ -122,16 +122,16 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_ef015fa747"
         }
-  recorded_at: Mon, 03 Nov 2025 13:59:23 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:45 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
     body:
       encoding: UTF-8
       string: '{"model":"gpt-4.1-nano","messages":[{"role":"user","content":"What''s
-        the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_ORuIYdgXtkTugIWFbEUfOL90","type":"function","function":{"name":"best_language_to_learn","arguments":"{}"}}]},{"role":"tool","content":"Ruby","tool_call_id":"call_ORuIYdgXtkTugIWFbEUfOL90"}],"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
+        the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_azoFR6ub8awyNahm3PsTcvS4","type":"function","function":{"name":"best_language_to_learn","arguments":"{}"}}]},{"role":"tool","content":"Ruby","tool_call_id":"call_azoFR6ub8awyNahm3PsTcvS4"}],"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[],"additionalProperties":false,"strict":true}}}]}'
     headers:
       User-Agent:
@@ -150,7 +150,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:59:24 GMT
+      - Sat, 29 Nov 2025 17:50:46 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -162,25 +162,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '293'
+      - '522'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '308'
+      - '538'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199986'
+      - '1999986'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 4ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -204,9 +204,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpNbgA8mU0cZ1G1QozZlkvn0yM0P",
+          "id": "chatcmpl-ChJNmvInyU7ctk6p8kch9XIPi4q45",
           "object": "chat.completion",
-          "created": 1762178363,
+          "created": 1764438646,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -237,7 +237,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_ef015fa747"
         }
-  recorded_at: Mon, 03 Nov 2025 13:59:24 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:46 GMT
 recorded_with: VCR 6.3.1
