--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4_1-nano_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4_1-nano_supports_streaming_responses.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:58:23 GMT
+      - Sat, 29 Nov 2025 17:50:37 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
@@ -36,25 +36,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '235'
+      - '107'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '248'
+      - '124'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199992'
+      - '1999993'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 2ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -77,28 +77,30 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"fbvGU3Pc"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"qrbDcquK"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"NR8fW1YXf"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"jj72J3vP7"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"tYIVbXFqN"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"tfX7sVs0w"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"k2d0cMANa"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"IDQcMiprk"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"Nl5mIhntX"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"VQ7rWeeiG"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"P5WsF4QQo"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"GS9tAN0i6"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"CMSVY8VIE"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"viRgqw9Cm"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"1mVcIh2Yv"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"67GunvprF"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"QiTY"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{"content":"."},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"TgOuZYIWF"}
 
-        data: {"id":"chatcmpl-CXpMcPPk9WUfPP1vG9BPPAoeSaqmT","object":"chat.completion.chunk","created":1762178302,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_950f36939b","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":7,"total_tokens":21,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"3GOCH668Yr"}
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"2gPx"}
+
+        data: {"id":"chatcmpl-ChJNdMZhbNOsY8W38M9wuoSwXQRms","object":"chat.completion.chunk","created":1764438637,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_eb30fd4545","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":8,"total_tokens":22,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"RWnv387gHa"}
 
         data: [DONE]
 
-  recorded_at: Mon, 03 Nov 2025 13:58:23 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:37 GMT
 recorded_with: VCR 6.3.1
 ...
