--- a/spec/fixtures/vcr_cassettes/chat_text_models_openai_gpt-4_1-nano_can_understand_remote_text.yml
+++ b/spec/fixtures/vcr_cassettes/chat_text_models_openai_gpt-4_1-nano_can_understand_remote_text.yml
@@ -26,40 +26,42 @@ http_interactions:
       - GitHub.com
       Content-Type:
       - text/plain; charset=utf-8
+      X-Origin-Cache:
+      - HIT
       Last-Modified:
-      - Tue, 28 Oct 2025 04:56:13 GMT
+      - Tue, 25 Nov 2025 23:24:38 GMT
       Access-Control-Allow-Origin:
       - "*"
       Etag:
-      - W/"69004ced-9c6"
+      - W/"69263ab6-9c6"
       Expires:
-      - Mon, 03 Nov 2025 09:55:43 GMT
+      - Sat, 29 Nov 2025 17:43:39 GMT
       Cache-Control:
       - max-age=600
       X-Proxy-Cache:
       - MISS
       X-Github-Request-Id:
-      - 5FE6:2C85A1:1EDEB8E:1F598A8:690879C5
+      - B013:1F2D92:2E9F5CF:2F23E32:692B2E73
       Accept-Ranges:
       - bytes
+      Age:
+      - '0'
       Date:
-      - Mon, 03 Nov 2025 13:48:00 GMT
+      - Sat, 29 Nov 2025 17:49:58 GMT
       Via:
       - 1.1 varnish
-      Age:
-      - '63'
       X-Served-By:
-      - cache-fra-etou8220020-FRA
+      - cache-mad2200113-MAD
       X-Cache:
       - HIT
       X-Cache-Hits:
-      - '1'
+      - '0'
       X-Timer:
-      - S1762177680.376469,VS0,VE2
+      - S1764438598.362667,VS0,VE129
       Vary:
       - Accept-Encoding
       X-Fastly-Request-Id:
-      - 27b02462077848382f28582e5af943f366df9a2e
+      - eebdbbff646d4c3418265f9364afcc33e90257f6
     body:
       encoding: ASCII-8BIT
       string: "Ruby is copyrighted free software by Yukihiro Matsumoto <matz@netlab.jp>.\nYou
@@ -95,7 +97,7 @@ http_interactions:
         \"AS IS\" AND WITHOUT ANY EXPRESS OR\n     IMPLIED WARRANTIES, INCLUDING,
         WITHOUT LIMITATION, THE IMPLIED\n     WARRANTIES OF MERCHANTABILITY AND FITNESS
         FOR A PARTICULAR\n     PURPOSE.\n"
-  recorded_at: Mon, 03 Nov 2025 13:48:00 GMT
+  recorded_at: Sat, 29 Nov 2025 17:49:58 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
@@ -153,7 +155,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 13:48:01 GMT
+      - Sat, 29 Nov 2025 17:50:00 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -165,25 +167,25 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '1181'
+      - '1850'
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '1200'
+      - '1864'
       X-Ratelimit-Limit-Requests:
-      - '500'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '499'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199353'
+      - '1999353'
       X-Ratelimit-Reset-Requests:
-      - 120ms
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 194ms
+      - 19ms
       X-Request-Id:
       - "<X_REQUEST_ID>"
       X-Openai-Proxy-Wasm:
@@ -207,16 +209,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-CXpCaGxmrF6TzOz0m64XkpNOsqbpb",
+          "id": "chatcmpl-ChJN0LfzADEIcVCkddmxtJukGcdwc",
           "object": "chat.completion",
-          "created": 1762177680,
+          "created": 1764438598,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "This file contains the license information for Ruby, a programming language created by Yukihiro Matsumoto. It details the terms under which Ruby can be redistributed, modified, and used. The license allows for free copying and modification of the software, provided certain conditions are met, such as preserving notices, making modifications public, or following specific distribution rules. It also includes disclaimers of warranties, stating that the software is provided \"as is\" without any guarantees of suitability or fitness for a particular purpose.",
+                "content": "The file \"license.txt\" contains the license and copyright information for the Ruby programming language, authored by Yukihiro Matsumoto. It outlines the terms under which Ruby can be redistributed, modified, and used, specifying options such as adherence to the 2-clause BSDL (Berkeley Software Distribution License) or certain specified conditions. \n\nKey points include:\n- Freedom to copy and give away verbatim source code with proper notices.\n- Conditions for modifying the software, including options to place modifications in the public domain or restrict usage within organizations.\n- Rules for distributing binaries, source code, or non-standard binaries.\n- Permissions related to incorporating parts of the software into other projects.\n- Clarification that scripts and library files input to or output from the software may belong to their respective creators.\n- The software is provided \"as is,\" without warranties.\n\nThis license allows broad reuse and modification while setting certain conditions to protect the rights of the author and users.",
                 "refusal": null,
                 "annotations": []
               },
@@ -226,8 +228,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 540,
-            "completion_tokens": 100,
-            "total_tokens": 640,
+            "completion_tokens": 192,
+            "total_tokens": 732,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -240,7 +242,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_950f36939b"
+          "system_fingerprint": "fp_1a97b5aa6c"
         }
-  recorded_at: Mon, 03 Nov 2025 13:48:01 GMT
+  recorded_at: Sat, 29 Nov 2025 17:50:00 GMT
 recorded_with: VCR 6.3.1
