--- a/spec/fixtures/vcr_cassettes/moderation_moderate_with_openai_provider_provides_convenience_methods_for_checking_results.yml
+++ b/spec/fixtures/vcr_cassettes/moderation_moderate_with_openai_provider_provides_convenience_methods_for_checking_results.yml
@@ -23,7 +23,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 03 Nov 2025 14:04:29 GMT
+      - Sat, 29 Nov 2025 17:54:52 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -35,13 +35,13 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      - proj_aOA91VEqh4zLCTLH6ZEONmZL
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Openai-Processing-Ms:
-      - '338'
+      - '148'
       X-Envoy-Upstream-Service-Time:
-      - '344'
+      - '152'
       X-Openai-Proxy-Wasm:
       - v0.1
       Cf-Cache-Status:
@@ -63,7 +63,7 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |-
         {
-          "id": "modr-1460",
+          "id": "modr-6883",
           "model": "omni-moderation-latest",
           "results": [
             {
@@ -84,19 +84,19 @@ http_interactions:
                 "violence/graphic": false
               },
               "category_scores": {
-                "harassment": 0.000011959857805023158,
-                "harassment/threatening": 3.7636447180974406e-6,
-                "sexual": 0.00006667023092435894,
-                "hate": 7.602479448313689e-6,
-                "hate/threatening": 3.2377619022355566e-7,
-                "illicit": 0.000015118199327273332,
-                "illicit/violent": 6.709224499600877e-6,
-                "self-harm/intent": 0.00021217710837818755,
-                "self-harm/instructions": 3.944258675190877e-6,
-                "self-harm": 0.0004544456121966584,
-                "sexual/minors": 5.307507822667365e-6,
-                "violence": 0.000493111798506495,
-                "violence/graphic": 2.931153855960119e-6
+                "harassment": 0.000010229985472581487,
+                "harassment/threatening": 3.0718185454758057e-6,
+                "sexual": 0.000054421326243255744,
+                "hate": 6.709224499600877e-6,
+                "hate/threatening": 2.948016613843445e-7,
+                "illicit": 0.000012533751425646102,
+                "illicit/violent": 5.829126566113866e-6,
+                "self-harm/intent": 6.10885510164857e-6,
+                "self-harm/instructions": 3.5913010679499402e-6,
+                "self-harm": 0.000017265154827585877,
+                "sexual/minors": 4.264746818557914e-6,
+                "violence": 0.00048644850322948033,
+                "violence/graphic": 2.2827997192887966e-6
               },
               "category_applied_input_types": {
                 "harassment": [
@@ -142,5 +142,5 @@ http_interactions:
             }
           ]
         }
-  recorded_at: Mon, 03 Nov 2025 14:04:29 GMT
+  recorded_at: Sat, 29 Nov 2025 17:54:52 GMT
 recorded_with: VCR 6.3.1
