Don't log request bodies by default - make it optional in config

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ GOOGLE_CLOUD_LOCATION=$(op read "op://RubyLLM/Google Cloud/location")
 # CODECOV_TOKEN=$(op read "op://RubyLLM/Codecov/credential")
 RUBYLLM_DEBUG=true
 RUBYLLM_STREAM_DEBUG=true
+RUBYLLM_LOG_REQUEST_BODIES=true
