Copy page button in docs + flickerless dark mode

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -92,6 +92,9 @@ enable_copy_code_button: true
 
 heading_anchors: true
 
+# Base URL for raw markdown source files (used by "Copy page Markdown" button)
+markdown_source_base_url: "https://raw.githubusercontent.com/crmne/ruby_llm/main/docs"
+
 color_scheme: light
 
 callouts:
